# proximal_avoidance

./: CMakeLists.txt  README.md  package.xml
launch/: p_controller.launch  pi_controller.launch  rviz_model.launch  urdf_load.launch
meshes/: chassis.stl  chassis2.stl  holobot - 100mm Aluminum Mecanum wheels-2.STL  holobot - 100mm Aluminum Mecanum wheels-3.STL  holobot - 100mm Aluminum Mecanum wheels-4.STL  holobot - hub washer-1.STL  holobot - hub washer-2.STL  holobot - hub washer-3.STL  holobot - hub washer-4.STL  holobot - hub-2.STL  holobot - hub-3.STL  holobot - hub-4.STL  holobot - motor-1.STL  holobot - motor-3.STL  holobot - motor-4.STL  holobot - motor-5.STL  holobot - socket head cap screw_iso-2.STL  holobot - socket head cap screw_iso-3.STL  holobot - socket head cap screw_iso-4.STL  holobot - socket head cap screw_iso-5.STL  hub.STL  hub2.stl
src/: accu_joy_control.cpp  error_symmetry.cpp  error_test.cpp  error_x.cpp  joy_control.cpp  laser_max_passthrough.cpp  laser_passthrough.cpp  motor_input.cpp  p_controller.cpp  pi_controller.cpp  tf_pub_vrep.cpp  urdf_parser.cpp
urdf/: holo.urdf
